[package]
name = "hpke-rs"
version = "0.0.11"
authors = ["Franziskus Kiefer <franziskuskiefer@gmail.com>"]
edition = "2018"
license = "MPL-2.0"
documentation = "https://www.franziskuskiefer.de/hpke-rs"
description = "HPKE Implementation using Evercrypt"
readme = "Readme.md"
repository = "https://github.com/franziskuskiefer/hpke-rs"

[dependencies]
serde_json = { version = "1.0", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
tls_codec = { version = "0.1", features = ["derive"], optional = true }
hpke_crypto_trait = { version = "0.1", path = "./traits" }

[features]
default = []
serialization = ["serde", "serde_json", "tls_codec", "tls_codec/serde_serialize"]
hazmat = []
hpke-test = []

[dev-dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4"
rayon = "1.5"
hpke-rs = { path = ".", features = ["hpke-test", "hazmat"] }
hpke_rust_crypto = { path = "./rust_crypto_provider", features = ["deterministic-prng"] }
hpke_evercrypt = { path = "./evercrypt_provider" }
rand = { version = "0.8" }
getrandom = { version = "0.2", features = ["js"] }
