[package]
name = "hpke-rs"
version = "0.1.2"
authors = ["Franziskus Kiefer <franziskuskiefer@gmail.com>"]
edition = "2021"
license = "MPL-2.0"
documentation = "https://docs.rs/hpke-rs"
description = "HPKE Implementation"
readme = "Readme.md"
repository = "https://github.com/franziskuskiefer/hpke-rs"

[dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"], optional = true }
tls_codec = { version = "0.4.0", features = ["derive"], optional = true }
zeroize = { version = "1.5", features = ["zeroize_derive"] }
hpke-rs-crypto = { version = "0.1.3", path = "./traits" }

[features]
default = []
std = []
serialization = ["serde", "tls_codec", "tls_codec/serde", "std"]
hazmat = []
hpke-test = ["std"]
hpke-test-prng = []                                                     # ⚠️ Enable testing PRNG - DO NOT USE

[dev-dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4"
rayon = "1.5"
hpke-rs = { path = ".", features = ["hpke-test", "hazmat"] }
hpke-rs-rust-crypto = { version = "0.1.3", path = "./rust_crypto_provider", features = [
    "deterministic-prng",
] }
# hpke-rs-evercrypt = { version = "0.1.3-pre.1", path = "./evercrypt_provider", features = ["deterministic-prng"] }
rand = { version = "0.8" }
getrandom = { version = "0.2", features = ["js"] }
pretty_env_logger = "0.5"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "bench"
harness = false

[[bench]]
name = "manual_benches"
harness = false
