[package]
name = "hpke_evercrypt"
version = "0.1.0"
edition = "2021"

[dependencies]
hpke_crypto_trait = { path = "../traits" }
# Evercrypt
evercrypt = { version = "0.0.10", features = ["serialization"] }
# Randomness
rand = { version = "0.8" }
getrandom = { version = "0.2", features = ["js"] }
rand_chacha = { version = "0.3" }
