[package]
name = "hpke-rs-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
hpke-rs = { version = "0.2.0", features = [
  "hazmat",
  "serialization",
  "hpke-test",
], path = "../" }
hpke-rs-crypto = { version = "0.2.0", path = "../traits" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rayon = "1.5"
log = "0.4"
pretty_env_logger = "0.5"

[features]
prng = ["hpke-rs/hpke-test-prng"]
