[package]
name = "hpke-rs-rust-crypto"
version = "0.1.3-pre.1"
authors = ["Franziskus Kiefer <franziskuskiefer@gmail.com>"]
edition = "2021"
license = "MPL-2.0"
documentation = "https://docs.rs/hpke-rs-rust-crypto"
description = "Crypto backend for HPKE using native Rust crypto."
readme = "Readme.md"
repository = "https://github.com/franziskuskiefer/hpke-rs"

[dependencies]
hpke-rs-crypto = { version = "0.1.3-pre.1", path = "../traits" }
# Rust crypto
hkdf = { version = "0.12" }
sha2 = { version = "0.10" }
p256 = { version = "0.13", features = ["arithmetic", "ecdh"] }
p384 = { version = "0.13" }
x25519-dalek-ng = { version = "1.1" }
chacha20poly1305 = { version = "0.10" }
aes-gcm = { version = "0.10" }
# Randomness
rand = { version = "0.8" }
getrandom = { version = "0.2", features = ["js"] }
rand_chacha = { version = "0.3" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[features]
deterministic-prng = [] # ⚠️ FOR TESTING ONLY.

[[bench]]
name = "bench_hkdf"
harness = false

[[bench]]
name = "bench_p256"
harness = false

[[bench]]
name = "bench_x25519"
harness = false
