[package]
name = "hpke-rs-crypto"
version = "0.1.3"
authors = ["Franziskus Kiefer <franziskuskiefer@gmail.com>"]
edition = "2021"
license = "MPL-2.0"
documentation = "https://docs.rs/hpke-rs-crypto"
description = "Traits and types for HPKE crypto backends"
readme = "Readme.md"
repository = "https://github.com/franziskuskiefer/hpke-rs"

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
rand_core = { version = "0.6.4" }
getrandom = { version = "0.2", features = ["js"] }

[features]
serde = ["dep:serde"]
std = []
